fix(button-group): refactor button group spacing rules (#7330)
### Related Ticket(s)

Resolves https://github.com/carbon-design-system/carbon-for-ibm-dotcom/issues/7213

### Description

`<dds-button-group-item>` elements previously had top margins in order to create vertical spacing when they stack at mobile viewport widths. This created problems when integrating them into other components, however, so now the buttons only create internal spacing.

### Changelog

**Changed**

- refactor `<dds-button-group`> and `<dds-button-group-item`> components to only apply internal spacing
- add spacing rules where appropriate to prevent regressions

<!-- React and Web Component deploy previews are enabled by default. -->
<!-- To enable additional available deploy previews, apply the following -->
<!-- labels for the corresponding package: -->
<!-- *** "package: services": Services -->
<!-- *** "package: utilities": Utilities -->
<!-- *** "package: styles": Carbon Expressive -->
<!-- *** "RTL": React / Web Components (RTL) -->
<!-- *** "feature flag": React / Web Components (experimental) -->

--- a/packages/styles/scss/components/buttongroup/_buttongroup.scss
+++ b/packages/styles/scss/components/buttongroup/_buttongroup.scss
@@ -1,5 +1,5 @@
 /**
-* Copyright IBM Corp. 2016, 2020
+* Copyright IBM Corp. 2016, 2021
 *
 * This source code is licensed under the Apache-2.0 license found in the
 * LICENSE file in the root directory of this source tree.
@@ -21,6 +21,7 @@
     display: grid;
     grid-template-columns: 1fr;
     grid-auto-rows: 1fr;
+    grid-gap: $carbon--layout-01;
 
     @include carbon--breakpoint(lg) {
       display: inline-grid;
@@ -34,13 +35,8 @@
   .#{$prefix}--buttongroup-item,
   :host(#{$dds-prefix}-button-group-item),
   :host(#{$dds-prefix}-button-cta) {
-    margin-top: $carbon--layout-01;
     max-width: carbon--mini-units(40);
     min-width: 0;
-
-    @include carbon--breakpoint(md) {
-      padding-right: $carbon--layout-01;
-    }
 
     .#{$prefix}--btn {
       font-size: 1rem;
